--- a/web.config
+++ b/web.config
@@ -1,29 +1,30 @@
+<?xml version="1.0" encoding="utf-8"?>    
 <configuration>
-  <appSettings>
-    <add key="WSGI_HANDLER" value="lms.wsgi.application"/>
-    <add key="PYTHONPATH" value="D:\home\python364x64"/>
-    <add key="WSGI_LOG" value="D:\home\LogFiles\wfastcgi.log"/>
-  </appSettings>
-  <system.webServer>
-    <handlers>
+<appSettings>
+  <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="lms.wsgi.application" />
+  <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="D:\home\site\wwwroot\env\Scripts\python.exe" />
+  <add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_venv_handler()" />
+  <add key="PYTHONPATH" value="D:\home\python364x64"/>
+  <add key="DJANGO_SETTINGS_MODULE" value="MyApp.settings" />
+  <add key="WSGI_LOG" value="D:\home\LogFiles\wfastcgit.log"/>
+</appSettings>
+<system.webServer>
+  <handlers>
+      <remove name="Python27_via_FastCGI" />
+      <remove name="Python34_via_FastCGI" />
       <add name="PythonHandler" path="handler.fcgi" verb="*" modules="FastCgiModule" scriptProcessor="D:\home\python364x64\python.exe|D:\home\python364x64\wfastcgi.py" resourceType="Unspecified" requireAccess="Script"/>
-    </handlers>
-    <rewrite>
-      <rules>
-        <rule name="Static Files" stopProcessing="true">
-          <conditions>
-            <add input="true" pattern="false" />
-          </conditions>
-        </rule>
-        <rule name="Configure Python" stopProcessing="true">
-          <match url="(.*)" ignoreCase="false" />
-          <conditions>
-            <add input="{REQUEST_URI}" pattern="^/static/.*" ignoreCase="true" negate="true" />
-          </conditions>
-          <action type="Rewrite" url="handler.fcgi/{R:1}" appendQueryString="true" />
-        </rule>
-      </rules>
-    </rewrite>
-  </system.webServer>
-</configuration>
- 
+  </handlers>
+  <rewrite>
+    <rules>
+      <rule name="Static Files" stopProcessing="true">
+        <conditions>
+          <add input="true" pattern="false" />
+        </conditions>
+      </rule>
+      <rule name="Configure Python" stopProcessing="true">
+        <match url="(.*)" ignoreCase="false" />
+        <action type="Rewrite" url="handler.fcgi/{R:1}" appendQueryString="true" />
+      </rule>
+    </rules>
+  </rewrite>
+</system.webServer>
