--- a/web.config
+++ b/web.config
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>    
 <configuration>
 <appSettings>
-  <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="lms.wsgi.application" />
-  <add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_venv_handler()" />
   <add key="PYTHONPATH" value="D:\home\python364x64"/>
-  <add key="DJANGO_SETTINGS_MODULE" value="MyApp.settings" />
+  <add key="DJANGO_SETTINGS_MODULE" value="lms.settings" />
   <add key="WSGI_LOG" value="D:\home\LogFiles\wfastcgit.log"/>
 </appSettings>
 <system.webServer>
