--- a/web.config
+++ b/web.config
@@ -1,7 +1,7 @@
 <configuration>
   <appSettings>
     <add key="WSGI_HANDLER" value="lms.wsgi.application"/>
-    <add key="PYTHONPATH" value="D:\home\python364x64"/>
+    <add key="PYTHONPATH" value="D:\home\site\wwwroot"/>
     <add key="WSGI_LOG" value="D:\home\LogFiles\wfastcgi.log"/>
   </appSettings>
   <system.webServer>
@@ -26,4 +26,6 @@
     </rewrite>
   </system.webServer>
 </configuration>
+
+
  
